# ANIOT-RPI1-RPI2-Group5

./: .gitignore  ANIOT-RPI-RPII-Group5-TrabajoFinal.docx  CMakeLists.txt  ProyectoFinal_Diagrama_Flujo.pptx  README.md  \  anotacionesPracticaFinal.md  build_project.sh  create_cert_chain.sh  create_device.sh  esp_prov.py  firmware.json  nvs.csv  powermanagement.c  pytest_wifi_prov_mgr.py  thingsboard_create_device.sh
ProjectoFinalGrupo5/: CMakeLists.txt
ProjectoFinalGrupo5/main/: main.c
certs/: chainCert.pem  device.csr  deviceCert.pem  deviceKey.pem  intermediate.csr  intermediateCert.pem  intermediateCert.srl  intermediateKey.pem  rootCert.pem  rootCert.srl  rootKey.pem
components/: CMakeLists.txt  Kconfig.projbuild  sgp30.c
components/include/: sgp30.h
components/json_structures/: CMakeLists.txt
components/mqtt/: CMakeLists.txt  certificated.pem  credentials  mqtt.c
components/mqtt_controller/: CMakeLists.txt  Kconfig.projbuild  chain.pem  deviceKey.pem  mqtt_controller.c  server.pem
components/nvs_component/: CMakeLists.txt
components/nvs_structures/: CMakeLists.txt  nvs_structures.c
components/ota/: CMakeLists.txt  Kconfig.projbuild
components/ota/include/: ota.h
components/ota/src/: ota.c
components/power_manager/: CMakeLists.txt  Kconfig.projbuild  power_manager.c
components/sgp30/: CMakeLists.txt  README.md  sgp30.c
components/sntp_sync/: CMakeLists.txt  sntp_sync.c
components/softAP_provision/: CMakeLists.txt  Kconfig.projbuild  softAP_provision.c
components/thingsboard/: CMakeLists.txt
main/: CMakeLists.txt  main.c
(+21 files in other folders)
